[package]
name = "matchmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["serde", "v4"] }
owo-colors = "3.5.0"
simple-websockets = "0.1.5"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.26"
md5 = "0.7.0"
dotenv = "0.15.0"
uuid = "0.8.2"

[build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
name = "matchmaker"
